# Validation_Selection_GR

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README (1).md  README.md  alembic.ini  docker-compose.yml  environment.yml  pyproject (1).toml  pyproject.toml  requirements (1).txt  requirements.txt
.codex/: rules.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
config/: database.yaml  demo_chr22.yaml  panels_1000g.yaml  paths.yaml  profiles.yaml  strategies.yaml  tools.yaml  validation.yaml
data/: README.md
docs/: 00_structure_pipeline_interface_db.md  01_objectifs_pipeline.md  02_installation_bioinfo.md  03_donnees_1000g.md  04_donnees_ega_dac.md  05_structure_base_donnees.md  06_interface_web.md  07_validation_methodologique.md  08_securite_donnees.md  09_architecture_jobs_interface_worker.md  CODE_INDEX.md  DEMARCHE_1000G_VALIDATION_PIPELINE (1).md  DEV_TRACKING.md  DOCKER_GUIDE_BEGINNER.md  POSTGRESQL_GUIDE_BEGINNER.md  RELEASE_NOTES_v5_4.md  ROADMAP.md
genorun_validation/: admixture (1).py  chip_mask (1).py  cli (1).py  config (1).py  convert.py  download (1).py  evaluation (1).py  kinship (1).py  metadata (1).py  pca.py  qc (1).py  report (1).py  roh (1).py  runner (1).py  scores.py  selection (1).py  utils (1).py
notebooks/: README.md
scripts/: check_tools.sh  create_demo_job.py  download_1000g_chr22.sh  download_1000g_metadata.sh  export_report.py  init_database.py  run_demo_chr22.py  run_mvp_chr22.sh  run_pipeline_cli.py  run_worker.py  run_worker_loop.py
src/genorun_validation/: cli.py  contracts.py  settings.py
tests/: conftest.py  test_command_runner.py  test_config.py  test_database.py  test_job_repository.py  test_jobs.py  test_metadata.py  test_scores.py  test_selection.py  test_settings.py  test_validators.py
web/: __init__.py  routes.py  wsgi.py
web/static/js/: app.js
(+61 files in other folders)
