[project]
name = "genorun-validation"
version = "0.1.0"
description = "Pipeline de validation de sélection WGS pour le projet Génome Réunion"
requires-python = ">=3.11"
authors = [{name = "Génome Réunion"}]
dependencies = [
  "flask>=3.0",
  "gunicorn>=22.0",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "plotly>=5.22",
  "pyyaml>=6.0",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "pydantic-settings>=2.4",
  "typer>=0.12",
  "rich>=13.7",
  "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
]

[project.scripts]
genorun-validation = "genorun_validation.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
branch = true
source = ["src/genorun_validation"]

[tool.coverage.report]
show_missing = true
# WHY: on ne bloque pas dès le scaffold ; le seuil sera relevé phase par phase (voir docs/ROADMAP.md).
fail_under = 0

[tool.ruff]
line-length = 110
target-version = "py311"
src = ["src", "scripts", "web", "tests"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I imports, UP pyupgrade, B bugbear, SIM simplifications, PTH usage de pathlib
select = ["E", "F", "I", "UP", "B", "SIM", "PTH"]
ignore = ["E501"]  # la largeur est gérée par le formateur

[tool.ruff.lint.isort]
known-first-party = ["genorun_validation"]

[tool.mypy]
python_version = "3.11"
# WHY: durcissement progressif. On commence permissif globalement et strict sur le cœur scientifique.
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = ["genorun_validation.core.*", "genorun_validation.contracts"]
disallow_untyped_defs = true
warn_return_any = true

[tool.setuptools.packages.find]
where = ["src"]
